# skkdict-jawiki-kris

./: .gitignore  Makefile  README.md  SKK-JISYO.jawiki.manual-rm  SKK-JISYO.manual-rm.utf16  check.py  pyproject.toml
.github/workflows/: python-app.yml
dat/: .gitignore
jawiki/: post_validate.py  skkdict.py
src/jawiki_kana_kanji_dict_kris/: __init__.py
tests/: mapping.tsv
