[project]
name = "jawiki-kana-kanji-dict-kris"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Kris57", email = "49682577+yuuki76@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
