[project]
name = "jawiki-kana-kanji-dict-kris"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Kris57", email = "49682577+yuuki76@users.noreply.github.com" }
]
dependencies = [
    "jaconv==0.3.4",
    "python-Levenshtein==0.20.9",
    "romkan==0.2.1",
    "Janome==0.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
